billy first commit

--- a/Event-Scape/www/index.html
+++ b/Event-Scape/www/index.html
@@ -58,6 +58,7 @@
         </div>
     
     </div>
+        <!--First Edit (billy)-->
         <div class = "jumbo">
             <div class = "container">
                 <h1> Event Scape</h1>
